--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1700,11 +1700,11 @@
     this~has~not~been~defined~yet.
   }
 \__kernel_msg_new:nnnn { kernel } { command-erroneous }
-  { Control~sequence~#1~undefined~or~invalid. }
+  { Control~sequence~#1~undefined. }
   {
     \c_@@_coding_error_text_tl
     LaTeX~has~been~asked~to~use~a~control~sequence~'#1':\\
-    this~has~not~been~defined~yet~or~is~invalid.
+    this~has~not~been~defined~yet.
   }
 \__kernel_msg_new:nnnn { kernel } { empty-search-pattern }
   { Empty~search~pattern. }
