--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1667,12 +1667,16 @@
 % \begin{macro}{\dim_use:N, \dim_use:c}
 %   Accessing a \meta{dim}.
 %    \begin{macrocode}
-\cs_new_eq:NN \dim_use:N \tex_the:D
 %    \end{macrocode}
-%    We hand-code this for some speed gain:
 %    \begin{macrocode}
 \__kernel_if_debug:TF
   {
+    \cs_set:Npn \dim_use:N #1
+      {
+        \tex_the:D
+        \__kernel_chk_exp_var_exist:NF #1 { \c_zero_dim \use_none:n }
+        #1
+      }
     \cs_new:Npn \dim_use:c #1
       {
         \tex_the:D
@@ -1681,6 +1685,7 @@
       }
   }
   {
+    \cs_new_eq:NN \dim_use:N \tex_the:D
     \cs_new:Npn \dim_use:c #1 { \tex_the:D \cs:w #1 \cs_end: }
   }
 %    \end{macrocode}
@@ -2026,9 +2031,14 @@
 % \begin{macro}{\skip_use:N, \skip_use:c}
 %   Accessing a \meta{skip}.
 %    \begin{macrocode}
-\cs_new_eq:NN \skip_use:N \tex_the:D
 \__kernel_if_debug:TF
   {
+    \cs_set:Npn \skip_use:N #1
+      {
+        \tex_the:D
+        \__kernel_chk_exp_var_exist:NF #1 { \c_zero_skip \use_none:n }
+        #1
+      }
     \cs_new:Npn \skip_use:c #1
       {
         \tex_the:D
@@ -2037,6 +2047,7 @@
       }
   }
   {
+    \cs_new_eq:NN \skip_use:N \tex_the:D
     \cs_new:Npn \skip_use:c #1 { \tex_the:D \cs:w #1 \cs_end: }
   }
 
@@ -2307,9 +2318,14 @@
 % \begin{macro}{\muskip_use:N, \muskip_use:c}
 %   Accessing a \meta{muskip}.
 %    \begin{macrocode}
-\cs_new_eq:NN \muskip_use:N \tex_the:D
 \__kernel_if_debug:TF
   {
+    \cs_set:Npn \muskip_use:N #1
+      {
+        \tex_the:D
+        \__kernel_chk_exp_var_exist:NF #1 { \c_zero_muskip \use_none:n }
+        #1
+      }
     \cs_new:Npn \muskip_use:c #1
       {
         \tex_the:D
@@ -2318,6 +2334,7 @@
       }
   }
   {
+    \cs_new_eq:NN \muskip_use:N \tex_the:D
     \cs_new:Npn \muskip_use:c #1 { \tex_the:D \cs:w #1 \cs_end: }
   }
 %    \end{macrocode}
