use \tex_the:D instead of \dim_use:N for internal expansion

--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1278,7 +1278,7 @@
 \cs_new:Npn \dim_abs:n #1
   {
     \exp_after:wN \@@_abs:N
-    \dim_use:N \@@_eval:w #1 \@@_eval_end:
+    \tex_the:D \@@_eval:w #1 \@@_eval_end:
   }
 \cs_new:Npn \@@_abs:N #1
   { \if_meaning:w - #1 \else: \exp_after:wN #1 \fi: }
@@ -1289,9 +1289,9 @@
   }
 \cs_new:Npn \dim_max:nn #1#2
   {
-    \dim_use:N \@@_eval:w \exp_after:wN \@@_maxmin:wwN
-      \dim_use:N \@@_eval:w #1 \exp_after:wN ;
-      \dim_use:N \@@_eval:w #2 ;
+    \tex_the:D \@@_eval:w \exp_after:wN \@@_maxmin:wwN
+      \tex_the:D \@@_eval:w #1 \exp_after:wN ;
+      \tex_the:D \@@_eval:w #2 ;
       >
     \@@_eval_end:
   }
@@ -1302,9 +1302,9 @@
   }
 \cs_new:Npn \dim_min:nn #1#2
   {
-    \dim_use:N \@@_eval:w \exp_after:wN \@@_maxmin:wwN
-      \dim_use:N \@@_eval:w #1 \exp_after:wN ;
-      \dim_use:N \@@_eval:w #2 ;
+    \tex_the:D \@@_eval:w \exp_after:wN \@@_maxmin:wwN
+      \tex_the:D \@@_eval:w #1 \exp_after:wN ;
+      \tex_the:D \@@_eval:w #2 ;
       <
     \@@_eval_end:
   }
@@ -1381,7 +1381,7 @@
 \prg_new_conditional:Npnn \dim_compare:n #1 { p , T , F , TF }
   {
     \exp_after:wN \@@_compare:w
-    \dim_use:N \@@_eval:w #1 \@@_compare_error:
+    \tex_the:D \@@_eval:w #1 \@@_compare_error:
   }
 \cs_new:Npn \@@_compare:w #1 \@@_compare_error:
   {
@@ -1400,7 +1400,7 @@
     \fi:
     \reverse_if:N \if_dim:w #1 pt #2
       \exp_after:wN \@@_compare:wNN
-      \dim_use:N \@@_eval:w #3
+      \tex_the:D \@@_eval:w #3
   }
 \cs_new:cpn { @@_compare_ ! :w }
     #1 \reverse_if:N #2 ! #3 = { #1 #2 = #3 }
@@ -1660,7 +1660,7 @@
 \__kernel_patch_args:nNNpn
   { { \__kernel_chk_expr:nNnN {#1} \@@_eval:w { } \dim_eval:n } }
 \cs_new:Npn \dim_eval:n #1
-  { \dim_use:N \@@_eval:w #1 \@@_eval_end: }
+  { \tex_the:D \@@_eval:w #1 \@@_eval_end: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1705,7 +1705,7 @@
 \cs_new:Npn \dim_to_decimal:n #1
   {
     \exp_after:wN
-      \@@_to_decimal:w \dim_use:N \@@_eval:w #1 \@@_eval_end:
+      \@@_to_decimal:w \tex_the:D \@@_eval:w #1 \@@_eval_end:
   }
 \use:x
   {
@@ -2006,7 +2006,7 @@
     \prg_new_conditional:Npnn \skip_if_finite:n ##1 { p , T , F , TF }
       {
         \exp_after:wN \@@_if_finite:wwNw
-        \skip_use:N \tex_glueexpr:D ##1 ; \prg_return_false:
+        \tex_the:D \tex_glueexpr:D ##1 ; \prg_return_false:
         #1 ; \prg_return_true: \q_stop
       }
     \cs_new:Npn \@@_if_finite:wwNw ##1 #1 ##2 ; ##3 ##4 \q_stop {##3}
@@ -2024,7 +2024,7 @@
 \__kernel_patch_args:nNNpn
   { { \__kernel_chk_expr:nNnN {#1} \tex_glueexpr:D { } \skip_eval:n } }
 \cs_new:Npn \skip_eval:n #1
-  { \skip_use:N \tex_glueexpr:D #1 \scan_stop: }
+  { \tex_the:D \tex_glueexpr:D #1 \scan_stop: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2311,7 +2311,7 @@
     }
   }
 \cs_new:Npn \muskip_eval:n #1
-  { \muskip_use:N \tex_muexpr:D #1 \scan_stop: }
+  { \tex_the:D \tex_muexpr:D #1 \scan_stop: }
 %    \end{macrocode}
 % \end{macro}
 %
