fix box checking, chk001 now good

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1787,7 +1787,7 @@
 %
 % \begin{macro}
 %   {\@@_check-declarations_on:, \@@_check-declarations_off:}
-% \begin{macro}{\__kernel_chk_var_exist:N,\__kernel_chk_var_exist:c, \__kernel_chk_var_exist:NT}
+% \begin{macro}{\__kernel_chk_var_exist:N,\__kernel_chk_var_exist:c}
 % \begin{macro}{\__kernel_chk_cs_exist:N, \__kernel_chk_cs_exist:c}
 % \begin{macro}{\__kernel_chk_var_local:N, \__kernel_chk_var_global:N}
 % \begin{macro}{\__kernel_chk_var_scope:NN}
@@ -1806,15 +1806,21 @@
   {
     \exp_args:Nc \cs_set_protected:Npn { @@_check-declarations_on: }
       {
-        \cs_set_protected:Npn \__kernel_chk_var_exist:N ##1
+        \cs_set_protected:Npn \__kernel_chk_var_exist:NF ##1 ##2
           {
             \@@_suspended:T \use_none:nnn
             \cs_if_exist:NF ##1
               {
                 \__kernel_msg_error:nnx { kernel } { non-declared-variable }
                   { \token_to_str:N ##1 }
+                ##2
               }
           }
+        \cs_set:Npn \__kernel_chk_var_exist:N ##1
+          {
+            \__kernel_chk_var_exist:NF ##1 { }
+          }
+
         \cs_set_protected:Npn \__kernel_chk_cs_exist:N ##1
           {
             \@@_suspended:T \use_none:nnn
@@ -1892,7 +1898,8 @@
       }
     \exp_args:Nc \cs_set_protected:Npn { @@_check-declarations_off: }
       {
-        \cs_set_protected:Npn \__kernel_chk_var_exist:N ##1 { }
+        \cs_set_protected:Npn \__kernel_chk_var_exist:N  ##1 { }
+        \cs_set_protected:Npn \__kernel_chk_var_exist:NF ##1##2 { }
         \cs_set_protected:Npn \__kernel_chk_cs_exist:N ##1 { }
         \cs_set:Npn \__kernel_chk_exp_cs_exist:N  ##1 { }
         \cs_set:Npn \__kernel_chk_exp_cs_exist:NT  ##1##2 { ##2 }
