--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -1133,12 +1133,12 @@
   {
     \cs_new_protected:Npn \box_use_drop:N #1
       {
-        \__kernel_chk_var_exist:N #1
+        \__kernel_chk_var_exist:NF #1 { \use_none:nn }
         \tex_box:D #1
       }
     \cs_new_protected:Npn \box_use:N #1
       {
-        \__kernel_chk_var_exist:N #1
+        \__kernel_chk_var_exist:NF #1 { \use_none:nn }
         \tex_copy:D #1
       }
   }
@@ -2249,13 +2249,13 @@
 \cs_generate_variant:Nn \box_autosize_to_wd_and_ht:Nnn { c }
 \cs_new_protected:Npn \box_autosize_to_wd_and_ht_plus_dp:Nnn #1#2#3
   {
-    \@@_autosize:NnnnN #1 {#2} {#3} { \box_ht:N #1 + \box_dp:N #1 } 
+    \@@_autosize:NnnnN #1 {#2} {#3} { \box_ht:N #1 + \box_dp:N #1 }
       \hbox_set:Nn
   }
 \cs_generate_variant:Nn \box_autosize_to_wd_and_ht_plus_dp:Nnn { c }
 \cs_new_protected:Npn \box_gautosize_to_wd_and_ht_plus_dp:Nnn #1#2#3
   {
-    \@@_autosize:NnnnN #1 {#2} {#3} { \box_ht:N #1 + \box_dp:N #1 } 
+    \@@_autosize:NnnnN #1 {#2} {#3} { \box_ht:N #1 + \box_dp:N #1 }
       \hbox_gset:Nn
   }
 \cs_generate_variant:Nn \box_gautosize_to_wd_and_ht_plus_dp:Nnn { c }
