Breakable links in dvips
The code is from hypdvips almost unchanged, other
than "evenboxes" ideas.

--- a/l3kernel/l3drivers-basics.dtx
+++ b/l3kernel/l3drivers-basics.dtx
@@ -146,6 +146,14 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\@@_postscript_header:n}
+%   PostScript for the header: a small saving but makes the code clearer.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_postscript_header:n #1
+  { \@@_literal:n { ! #1 } }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}{\@@_align_currentpoint_begin:, \@@_align_currentpoint_end:}
 %   In \texttt{dvips} there is no build-in saving of the current
 %   position, and so some additional PostScript is required to set up the
