--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -712,6 +712,12 @@
 %   this to be negative (contrast \pkg{hypdvips} approach). The result should
 %   be similar to \pdfTeX{} in the vast majority of foreseeable cases.
 %
+%  The object number for a link is saved separately from the rest of the
+%  dictionary as this allows us to insert it just once, at either an
+%  unbroken link or only in the first line of a broken one. That makes the
+%  code clearer but also avoids a low-level PostScript error with the code
+%  as taken from \pkg{hypdvips}.
+%
 %  Getting the outer dimensions of the text area may be better using a two-pass
 %  approach and |\tex_savepos:D|. That plus format mode are still to re-examine.
 %    \begin{macrocode}
