Remove a dead comment

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -706,11 +706,7 @@
 %     driver.baselineskip
 %   }
 %   Links are crated like annotations but with dedicated code to allow for
-%   adjusting the size of the rectangle. In contrast to \pkg{hyperref},
-%   we use the approach of creating an object explicitly here rather than
-%   use the |[| syntax. % ]
-%   That has the advantage of allowing us to provide a reference to the link
-%   later: that is not possible if one uses the shortcut syntax.
+%   adjusting the size of the rectangle.
 %
 %   Taking the idea of |evenboxes| from \pkg{hypdvips}, we implement a minimum
 %   box height and depth for link placement. This means that \enquote{underlining}
