Split link creation into begin/end functions
By using a box, we can keep the ability of hypdvips 
to allow breaking of \pdfmark, but avoid the issue with
finding the end of the link.

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -690,7 +690,14 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}{\driver_pdf_link_goto:nnn, \driver_pdf_link_user:nnn}
+% \begin{variable}{\g_@@_pdf_link_dict_tl}
+%   To pass information to the end-of-link function.
+%    \begin{macrocode}
+\int_new:N \g_@@_pdf_link_dict_tl
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}{\driver_pdf_link_begin_goto:nnw, \driver_pdf_link_begin_user:nnw}
 % \begin{macro}{\@@_pdf_link:nnnn}
 % \begin{macro}{\@@_pdf_link_minima:}
 % \begin{macro}{\@@_pdf_link_outerbox:n}
@@ -706,7 +713,9 @@
 %     driver.baselineskip
 %   }
 %   Links are crated like annotations but with dedicated code to allow for
-%   adjusting the size of the rectangle.
+%   adjusting the size of the rectangle. In contrast to \pkg{hyperref}, we
+%   grab the link content as a box which can then unbox: this allows the same
+%   interface as for \pdfTeX{}.
 %
 %   Taking the idea of |evenboxes| from \pkg{hypdvips}, we implement a minimum
 %   box height and depth for link placement. This means that \enquote{underlining}
@@ -724,11 +733,11 @@
 %   Getting the outer dimensions of the text area may be better using a two-pass
 %   approach and |\tex_savepos:D|. That plus format mode are still to re-examine.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_pdf_link_goto:nnn #1#2#3
-  { \@@_pdf_link:nnnn {#1} { /GoTo } {#2} {#3} }
-\cs_new_protected:Npn \driver_pdf_link_user:nnn #1#2#3
-  { \@@_pdf_link:nnnn {#1} { } {#2} {#3} }
-\cs_new_protected:Npn \@@_pdf_link:nnnn #1#2#3#4
+\cs_new_protected:Npn \driver_pdf_link_begin_goto:nnw #1#2
+  { \@@_pdf_link_begin:nnnw {#1} { /GoTo } {#2} }
+\cs_new_protected:Npn \driver_pdf_link_begin_user:nnw #1#2
+  { \@@_pdf_link_begin:nnnw {#1} { } {#2} }
+\cs_new_protected:Npn \@@_pdf_link_begin:nnnw #1#2#3
   {
     \@@_postscript:n
       { /driver.link.dict ( #1 ~ #2 ~ #3 ~ /Subtype /Link ) def }
@@ -742,7 +751,12 @@
           }
             def
       }
-    \hbox_set:Nn \l_@@_pdf_content_box {#4}
+    \tl_gset:Nn \g_@@_pdf_link_dict_tl { #1 ~ #2 ~ #3 }
+    \hbox_set:Nw \l_@@_pdf_content_box
+  }
+\cs_new_protected:Npn \driver_pdf_link_end:
+  {
+    \hbox_set_end:
     \@@_pdf_link_minima:
     \hbox_set:Nn \l_@@_pdf_model_box { Gg }
     \exp_args:Nx \@@_driver_link_outerbox:n
@@ -769,7 +783,7 @@
     \@@_postscript:x
       {
         mark
-        #1 #2 #3 /Subtype /Link ~
+        \g_@@_pdf_link_dict_tl /Subtype /Link ~
         driver.annotation.border
         /ANN ~ driver.pdfmark
       }
@@ -954,27 +968,32 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\driver_pdf_link_goto:nnn, \driver_pdf_link_user:nnn}
-% \begin{macro}{\@@_pdf_link:nnnn}
+% \begin{macro}
+%   {\driver_pdf_link_begin_goto:nnw, \driver_pdf_link_begin_user:nnw}
+% \begin{macro}{\@@_pdf_link_begin:nnnw}
+% \begin{macro}{\driver_pdf_link_end:}
 %   Links are all created using the same internals.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_pdf_link_goto:nnn #1#2#3
-  { \@@_pdf_link_begin:nnnn {#1} { goto~name } {#2} {#3} }
-\cs_new_protected:Npn \driver_pdf_link_user:nnn #1#2#3
-  { \@@_pdf_link_begin:nnnn {#1} { user } {#2} {#3} }
-\cs_new_protected:Npx \@@_pdf_link_begin:nnnn #1#2#3#4
+\cs_new_protected:Npn \driver_pdf_link_begin_goto:nnw #1#2
+  { \@@_pdf_link_begin:nnnw {#1} { goto~name } {#2} }
+\cs_new_protected:Npn \driver_pdf_link_begin_user:nnw #1#2
+  { \@@_pdf_link_begin:nnnw {#1} { user } {#2} }
+\cs_new_protected:Npx \@@_pdf_link_begin:nnnw #1#2#3
   {
     \cs_if_exist:NTF \tex_pdfextension:D
       { \tex_pdfextension:D startlink ~ }
       { \tex_pdfstartlink:D }
-      attr {#1}
-      #2 { /Subtype /Link #3 }
-    #4
+        attr {#1}
+        #2 { /Subtype /Link #3 }
+  }
+\cs_new_protected:Npx \driver_pdf_link_end:
+  {
     \cs_if_exist:NTF \tex_pdfextension:D
       { \tex_pdfextension:D endlink \scan_stop: }
       { \tex_pdfendlink:D }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
@@ -1308,14 +1327,17 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\driver_pdf_link_goto:nnn, \driver_pdf_link_user:nnn}
-% \begin{macro}{\@@_pdf_link_begin:nnnn}
+% \begin{macro}
+%   {\driver_pdf_link_begin_goto:nnw, \driver_pdf_link_begin_user:nnw}
+% \begin{macro}{\driver_pdf_link_end:}
+% \begin{macro}{\@@_pdf_link_begin:nnn}
+%   All created using the same internals.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_pdf_link_goto:nnn #1#2#3
-  { \@@_pdf_link:nnnn {#1} { /GoTo } {#2} {#3} }
-\cs_new_protected:Npn \driver_pdf_link_user:nnn #1#2#3
-  { \@@_pdf_link:nnnn {#1} { } {#2} {#3} }
-\cs_new_protected:Npn \@@_pdf_link:nnnn #1#2#3#4
+\cs_new_protected:Npn \driver_pdf_link_begin_goto:nnw #1#2
+  { \@@_pdf_link_begin:nnnw {#1} { /GoTo } {#2} }
+\cs_new_protected:Npn \driver_pdf_link_begin_user:nn #1#2
+  { \@@_pdf_link_begin:nnnw {#1} { } {#2} }
+\cs_new_protected:Npn \@@_pdf_link_begin:nnnw #1#2#3
   {
     \@@_pdf:n
       {
@@ -1326,10 +1348,11 @@
            #1 ~ #2 ~ #3
          >>
       }
-    #4
-    \@@_pdf:n { eann }
   }
+\cs_new_protected:Npn \driver_pdf_link_end:
+  { \@@_pdf:n { eann } }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
