Correct function name

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -755,7 +755,7 @@
 % \end{variable}
 %
 % \begin{macro}{\driver_pdf_link_begin_goto:nnw, \driver_pdf_link_begin_user:nnw}
-% \begin{macro}{\@@_pdf_link:n, \@@_pdf_link_aux:n}
+% \begin{macro}{\@@_pdf_link:nw, \@@_pdf_link_aux:nw}
 % \begin{macro}{\driver_pdf_link_end:, \@@_pdf_link_end:}
 % \begin{macro}{\@@_pdf_link_minima:}
 % \begin{macro}{\@@_pdf_link_outerbox:n}
@@ -793,13 +793,13 @@
 %   approach and |\tex_savepos:D|. That plus format mode are still to re-examine.
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_pdf_link_begin_goto:nnw #1#2
-  { \@@_pdf_link_begin:n { #1 /A << /S /GoTo /D ( #2 ) >> } }
+  { \@@_pdf_link_begin:nw { #1 /A << /S /GoTo /D ( #2 ) >> } }
 \cs_new_protected:Npn \driver_pdf_link_begin_user:nnw #1#2
-  { \@@_pdf_link_begin:n {#1#2} }
-\cs_new_protected:Npn \@@_pdf_link_begin:n #1
+  { \@@_pdf_link_begin:nw {#1#2} }
+\cs_new_protected:Npn \@@_pdf_link_begin:nw #1
   {
     \bool_if:NF \g_@@_pdf_link_bool
-      { \@@_pdf_link_begin_aux:n {#1} }
+      { \@@_pdf_link_begin_aux:nw {#1} }
   }
 \cs_new_protected:Npn \@@_pdf_link_begin_aux:nw #1
   {
