--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -578,6 +578,7 @@
   \@@_primitive:NN \pdfoutline            \tex_pdfoutline:D
   \@@_primitive:NN \pdfoutput             \tex_pdfoutput:D
   \@@_primitive:NN \pdfpageattr           \tex_pdfpageattr:D
+  \@@_primitive:NN \pdfpagesattr          \tex_pdfpagesattr:D
   \@@_primitive:NN \pdfpagebox            \tex_pdfpagebox:D
   \@@_primitive:NN \pdfpageref            \tex_pdfpageref:D
   \@@_primitive:NN \pdfpageresources      \tex_pdfpageresources:D
