--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1025,9 +1025,10 @@
 %   \item Johannes Braams
 %   \item David Carlisle
 %   \item Robin Fairbairns
+%   \item Ulrike Fischer
+%   \item Enrico Gregorio
 %   \item Morten H{\o}gholm
 %   \item Bruno Le Floch
-%   \item Thomas Lotze
 %   \item Frank Mittelbach
 %   \item Will Robertson
 %   \item Chris Rowley
@@ -1039,6 +1040,7 @@
 %   \item Michael Downes
 %   \item Denys Duchier
 %   \item Alan Jeffrey
+%   \item Thomas Lotze
 %   \item Martin Schr{\"o}der
 % \end{itemize}
 %
