--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -439,7 +439,7 @@
 %
 % \begin{function}{\driver_draw_box_use:Nnnnn}
 %   \begin{syntax}
-%     \cs{driver_draw_box:Nnnnnnn} \meta{box}
+%     \cs{driver_draw_box_use:Nnnnn} \meta{box}
 %       \Arg{a} \Arg{b} \Arg{c} \Arg{d} \Arg{x} \Arg{y}
 %   \end{syntax}
 %   Inserts the \meta{box} as an hbox with the box reference point placed
