Fix clipping of paths
This needs the path to be 'discarded'.

--- a/l3experimental/l3draw/l3draw-paths.dtx
+++ b/l3experimental/l3draw/l3draw-paths.dtx
@@ -888,11 +888,15 @@
       { \l_draw_bb_update_bool }
       { \l_@@_path_use_stroke_bool }
       { \@@_path_use_stroke_bb: }
-    \bool_if:NTF \l_@@_path_use_clear_bool
-      { \@@_softpath_use_clear: }
-      { \@@_softpath_use: }
+    \@@_softpath_use:
     \bool_if:NT \l_@@_path_use_clip_bool
-      { \driver_draw_clip: }
+      {
+        \driver_draw_clip:
+        \bool_lazy_or:nnF
+          { \l_@@_path_use_fill_bool }
+          { \l_@@_path_use_stroke_bool }
+          { \driver_draw_discardpath: }
+      }
     \bool_lazy_or:nnT
       { \l_@@_path_use_fill_bool }
       { \l_@@_path_use_stroke_bool }
@@ -905,6 +909,8 @@
             :
           }
       }
+    \bool_if:NT \l_@@_path_use_clear_bool
+      { \@@_softpath_clear: }
   }
 \cs_new_protected:Npn \@@_path_use_action_draw:
   {
