Proper error message

--- a/l3experimental/l3draw/l3draw-paths.dtx
+++ b/l3experimental/l3draw/l3draw-paths.dtx
@@ -880,7 +880,7 @@
           { \bool_set_true:c { l_@@_path_use_ ##1 _ bool } }
           {
             \cs_if_exist_use:cF { @@_path_use_action_ ##1 : }
-              { \ERROR }
+              { \msg_error:nnn { draw } { invalid-path-action } {##1} }
           }
       }
     \@@_softpath_round_corners:
@@ -1021,6 +1021,12 @@
   }
 %    \end{macrocode}
 % \end{macro}
+%
+% \begin{macrocode}
+\msg_new:nnnn { draw } { invalid-path-action }
+  { Invalid~action~'#1'~for~path. }
+  { Paths~can~be~used~with~actions~'draw',~'clip',~'fill'~or~'stroke'. }
+% \end{macrocode}
 %
 %    \begin{macrocode}
 %</initex|package>
