Support PDF catalogue entries

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -91,6 +91,15 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \subsubsection{Catalogue entries}
+%
+% \begin{macro}{\driver_pdf_catalog_gput:nn}
+%    \begin{macrocode}
+\cs_new_protected:Npn \driver_pdf_catalog_gput:nn #1#2
+  { \@@_pdfmark:n { /#1 #2 /DOCINFO } }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsubsection{Objects}
 %
 % \begin{variable}{\g_@@_pdf_object_int, \g_@@_pdf_object_prop}
@@ -1150,6 +1159,20 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \subsubsection{Catalogue entries}
+%
+% \begin{macro}{\driver_pdf_catalog_gput:nn}
+%    \begin{macrocode}
+\cs_new_protected:Npx \driver_pdf_catalog_gput:nn #1#2
+  {
+    \cs_if_exist:NTF \tex_pdfextension:D
+      { \tex_pdfextension:D info }
+      { \tex_pdfinfo:D }
+        { / #1 #2 }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsubsection{Objects}
 %
 % \begin{variable}{\g_@@_pdf_object_prop}
@@ -1338,6 +1361,15 @@
 \cs_new_protected:Npx \@@_pdf:n #1
   { \@@_literal:n { pdf: #1 } }
 \cs_generate_variant:Nn \@@_pdf:n { x }
+%    \end{macrocode}
+% \end{macro}
+%
+% \subsubsection{Catalogue entries}
+%
+% \begin{macro}{\driver_pdf_catalog_gput:nn}
+%    \begin{macrocode}
+\cs_new_protected:Npn \driver_pdf_catalog_gput:nn #1#2
+  { \@@_pdf:n { docinfo << /#1 #2 >> } }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1596,6 +1628,15 @@
 %    \begin{macrocode}
 %<*dvisvgm>
 %    \end{macrocode}
+%
+% \subsubsection{Catalogue entries}
+%
+% \begin{macro}{\driver_pdf_catalog_gput:nn}
+%   No-op.
+%    \begin{macrocode}
+\cs_new_protected:Npn \driver_pdf_catalog_gput:nn #1#2 { }
+%    \end{macrocode}
+% \end{macro}
 %
 % \subsubsection{Objects}
 %
