--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -914,6 +914,9 @@
 %     abc { def }
 %   \end{verbatim}
 %   \emph{i.e.} only the outer braces are removed.
+%   \begin{texnote}
+%     The \cs{use:n} function is equivalent to \LaTeXe{}'s \cs{@firstofone}.
+%   \end{texnote}
 % \end{function}
 %
 % \begin{function}[EXP]{\use_i:nn, \use_ii:nn}
@@ -929,6 +932,10 @@
 %   of these tokens is also fixed (if it has not already been by
 %   some other absorption). A single expansion is needed for the
 %   functions to take effect.
+%   \begin{texnote}
+%     These are equivalent to \LaTeXe{}'s \cs{@firstoftwo} and
+%     \cs{@sedondoftwo}.
+%   \end{texnote}
 % \end{function}
 %
 % \begin{function}[EXP]{\use_i:nnn, \use_ii:nnn, \use_iii:nnn}
@@ -1003,6 +1010,10 @@
 %   These functions work after a single expansion. One or more of the
 %   \texttt{n} arguments may be an unbraced single token
 %   (\emph{i.e.}~an \texttt{N} argument).
+%   \begin{texnote}
+%     These are equivalent to \LaTeXe{}'s \cs{@gobble}, \cs{@gobbbletwo},
+%     \emph{etc.}
+%   \end{texnote}
 % \end{function}
 %
 % \begin{function}[EXP, added = 2018-06-18]{\use:e}
