--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1108,6 +1108,11 @@
   \@@_primitive:NN \Uunderdelimiter       \tex_Uunderdelimiter:D
   \@@_primitive:NN \Uvextensible          \tex_Uvextensible:D
 %    \end{macrocode}
+% Primitives from Harf\TeX{}.
+%    \begin{macrocode}
+  \@@_primitive:NN \harftexrevision       \tex_harftexrevision:D
+  \@@_primitive:NN \harftexversion        \tex_harftexversion:D
+%    \end{macrocode}
 % Primitives from \pTeX{}.
 %    \begin{macrocode}
   \@@_primitive:NN \autospacing           \tex_autospacing:D
