Markup (and a typo)

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -915,7 +915,7 @@
 %   \end{verbatim}
 %   \emph{i.e.} only the outer braces are removed.
 %   \begin{texnote}
-%     The \cs{use:n} function is equivalent to \LaTeXe{}'s \cs{@firstofone}.
+%     The \cs{use:n} function is equivalent to \LaTeXe{}'s \tn{@firstofone}.
 %   \end{texnote}
 % \end{function}
 %
@@ -933,8 +933,8 @@
 %   some other absorption). A single expansion is needed for the
 %   functions to take effect.
 %   \begin{texnote}
-%     These are equivalent to \LaTeXe{}'s \cs{@firstoftwo} and
-%     \cs{@sedondoftwo}.
+%     These are equivalent to \LaTeXe{}'s \tn{@firstoftwo} and
+%     \tn{@secondoftwo}.
 %   \end{texnote}
 % \end{function}
 %
@@ -1011,7 +1011,7 @@
 %   \texttt{n} arguments may be an unbraced single token
 %   (\emph{i.e.}~an \texttt{N} argument).
 %   \begin{texnote}
-%     These are equivalent to \LaTeXe{}'s \cs{@gobble}, \cs{@gobbbletwo},
+%     These are equivalent to \LaTeXe{}'s \tn{@gobble}, \tn{@gobbbletwo},
 %     \emph{etc.}
 %   \end{texnote}
 % \end{function}
